[package]
name = "shog_studio"
version = "1.0.2"
edition = "2021"


[dependencies]
home = "0.5.9"
actix-web = "4" 
lazy_static = "1.4.0"
actix-files = "0.6.5"
handlebars = "5.1.2"
serde_json = "1.0.117"
reqwest = { version = "0.12.4", features = ["blocking"]}
serde = { version = "1.0.203", features = ["derive"]}
librqbit = "5.6.4"
tokio = "1.37.0"
futures = "0.3.30"
showfile = "0.1.1"
opener = "0.7.1"
ethers = "2.0.14"
colored = "2.1.0"
include_dir = "0.7.3"
llama_cpp_rs = { path="./rust-llama.cpp" }
async-stream = "0.3"
bytes = "1.1" 
